#70: Add support for OFT's command line option `--wanted-tags` (#71)
Co-authored-by: kaklakariada <christoph@users.sourceforge.net>